--- a/exercises/04_university-db/CMakeLists.txt
+++ b/exercises/04_university-db/CMakeLists.txt
@@ -12,3 +12,11 @@ FetchContent_Declare(
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(${PROJECT_NAME}-ut src/test.cpp)
+target_link_libraries(${PROJECT_NAME}-ut GTest::gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(${PROJECT_NAME}-ut)
